# satellite-tracker

./: README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py
backend/app/core/: config.py
backend/app/domain/: tle.py
backend/app/parsers/: tle_parser.py
backend/app/providers/: tle_provider.py
backend/app/services/: health_service.py
backend/tests/scratch/: test_parser.py  test_tle_provider.py
