[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "satellite-tracker-backend"
version = "0.1.0"
description = "Backend for the Satellite Tracker project"
requires-python = ">=3.14"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]